--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,12 @@
   "author": "Dipanshu",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.3",
     "mqtt": "^5.3.3"
   }
 }
