at current stage one way communication is stablished , authentication is implemented , and chatPermissions are implemented, and there  is some issue regarding the css of chatwindow, reference of input field at chat window as it moves downward when typing message , and duplex communication isnt implemented yet

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-DB_CONNECTION_URL:"mongodb+srv://Dipanshu:8WGFjPHVwdPa1Uxz@cluster0.qaw9de6.mongodb.net//"
+DB_CONNECTION_URL="mongodb+srv://Dipanshu:8WGFjPHVwdPa1Uxz@cluster0.qaw9de6.mongodb.net//"
+SECRET_KEY="Mesecretkey"
+REQUIRES_AUTH="true"
