--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.1",
     "axios": "^1.6.2",
     "joi-browser": "^13.4.0",
+    "jwt-decode": "^4.0.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
